<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Objectives List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="tasks">Tasks</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_limit">Date Limit</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="new_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="done">Done</string>
    <string name="etat_task">State</string>
    <string name="button_trie">Sort</string>
    <string name="cancel">Cancel</string>
    <string name="delete_task">Delete</string>
    <string name="back">Back</string>
    <string name="create_new_task">Create New Task</string>

    <string-array name="etat_value">
        <item>In progress</item>
        <item>Cancel</item>
        <item>Finish</item>
    </string-array>
    <string-array name="etat_trie">
        <item>All</item>
        <item>In progress</item>
        <item>Cancel</item>
        <item>Finish</item>
    </string-array>
    <string name="categie_label">Categories</string>
    <string-array name="categorie">
        <item>none</item>
        <item>work</item>
        <item>holiday</item>
        <item>hobie</item>
    </string-array>
    <string name="title_activity_trie">Sort</string>
    <string name="tasks_done">Archives</string>
    <string name="title_activity_dones_tasks">DonesTasksActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_created">Task Created</string>

</resources>
