<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_sort"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context="fr.objectiveslist.fragments.SortFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/state"
                style="@style/BaseItem"
                android:text="@string/etat_task"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/etat_trie"
                style="@style/BaseItem" />

            <TextView
                android:id="@+id/set_date"
                style="@style/BaseItem"
                android:text="@string/set_date" />
            <Button
                android:id="@+id/dateTrie"
                style="@style/BaseItem"
                android:text="@string/set_date" />
            <TextView
                android:id="@+id/title"
                style="@style/BaseItem"
                android:text="@string/title" />

            <EditText
                android:id="@+id/nom"
                style="@style/BaseItem" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categie_label"
                android:id="@+id/textView4" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sort"
            style="@style/BaseItem"
            android:layout_weight="1"
            android:text="@string/button_trie" />

        <Button
            android:id="@+id/cancel"
            style="@style/BaseItem"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
